# compile-time-init-build

./: meson.build
subprojects/: fmt.wrap
test/log_binary/catalog/: conftest.py
